# Embedded_Sensors_Lab

./: .gitignore  .gitmodules  README.md
BoostPackXL_cmake/: CMakeLists.txt  CMakePresets.json
BoostPackXL_cmake/cfg/: app_hooks.c  syscalls.h
BoostPackXL_cmake/cmake/: arm-gcc-toolchain-linux.cmake  arm-gcc-toolchain-windows.cmake  arm-gcc-toolchain.cmake  lvgl-cmake-test.cmake  lvgl-components.cmake
BoostPackXL_cmake/inc/: TM4C129.h  bsp_accel.h  bsp_joystick.h  bsp_lv_port_disp.h  bsp_mic.h  bsp_systick_handler.h  bsp_uart.h  fonts.h  game_of_life.h  includes.h  lv_conf.h  st7735.h
BoostPackXL_cmake/src/: HX8353E(backup)  bsp_accel.c  bsp_gpio.c  bsp_joystick.c  bsp_lv_port_disp.c  bsp_mic.c  bsp_ssi.c  bsp_systick_handler.c  game_of_life.c  main.c  st7735 copy.txt  st7735.c  syscalls.c
BoostPackXL_cmake/utils/: flash.bat
BoosterPackXL/inc/: HX8353E(backup)  HX8353E.h  PCA9685.h  bsp_gpio.h  bsp_i2c.h  bsp_joystick.h  bsp_lv_port_disp.h  bsp_ssi.h  bsp_uart.h  bsp_utils.h  game_of_life.h  includes.h  lv_conf.h  st7735 copy.txt  st7735.h  st7735_2.h  syscalls.h
BoosterPackXL/src/: HX8353E.c  PCA9685.c  bsp_gpio.c  bsp_i2c.c  bsp_joystick.c  bsp_lv_port_disp.c  bsp_ssi.c  bsp_uart.c  bsp_utils.c  button_menu.c  game_of_life.c  main.c  st7735.c  st7735_2.c  startup_gcc.c  syscalls.c
Educational_BoosterPack_MKII/src/: main.c
Educational_BoosterPack_MKII/uC-OS2/Cfg/Template/: app_cfg.h
Educational_BoosterPack_MKII_Test/cfg/: app_cfg.h
Educational_BoosterPack_MKII_Test/inc/: BSP.h  BSP2.h
Educational_BoosterPack_MKII_Test/src/: .main.c.swo  BSP.c  BSP2.c  main.c  startup_gcc.c  uartstdioTemp.c
TivaCSeries/TempHumidity/inc/: TM4C123.h
TivaCSeries/TempHumidity/src/: main.c  startup_gcc.c  system_TM4C123.c
TivaCSeries/driverlib/: sysctl.c
